--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,5 +1,19 @@
-  db:
-     driver-class-name: "com.mysql.cj.jdbc.Driver"
-     url: "jdbc:mysql://localhost:3306/hr_be_api"
-     username: "root"
-     password: "Selamlar123+"
+db:
+  driver-class-name: "com.mysql.cj.jdbc.Driver"
+  url: "jdbc:mysql://localhost:3306/hr_be_api"
+  username: "root"
+  password: "Selamlar123+"
+
+spring:
+  mail:
+    default-encoding: UTF-8
+    host: "smtp.gmail.com"
+    username: ${MAIL_USERNAME}
+    password: ${MAIL_PASSWORD}
+    port: 587
+    properties:
+      mail:
+        smtp:
+          auth: true
+          starttls:
+            enable: true
