--- a/pom.xml
+++ b/pom.xml
@@ -32,7 +32,13 @@
 			<artifactId>spring-boot-starter-mail</artifactId>
 		</dependency>
 
-        <dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-validation</artifactId>
+		</dependency>
+
+
+		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
