--- a/.gitignore
+++ b/.gitignore
@@ -19,7 +19,6 @@ bin/
 .vscode/
 
 # Maven
-target/
 pom.xml.tag
 pom.xml.releaseBackup
 pom.xml.versionsBackup
@@ -36,18 +35,43 @@ out/
 
 # IDE
 *.idea/
-*.iml
 *.ipr
 *.iws
-.vscode/
 *.classpath
 *.project
 
 # Logs
-*.log
 log/
 logs/
 
 # OS-specific
 .DS_Store
 Thumbs.db
+
+HELP.md
+!.mvn/wrapper/maven-wrapper.jar
+!**/src/main/**/target/
+!**/src/test/**/target/
+
+### STS ###
+.apt_generated
+.classpath
+.factorypath
+.project
+.settings
+.springBeans
+.sts4-cache
+
+### IntelliJ IDEA ###
+.idea
+
+### NetBeans ###
+/nbproject/private/
+/nbbuild/
+/dist/
+/nbdist/
+/.nb-gradle/
+!**/src/main/**/build/
+!**/src/test/**/build/
+
+### VS Code ###
