--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,6 +1,6 @@
 db:
   driver-class-name: "com.mysql.cj.jdbc.Driver"
-  url: "jdbc:mysql://localhost:3306/hr_be_api"
+  url: "jdbc:mysql://localhost:port/database_name"
   username: ${db.username}
   password: ${db.password}
 
