--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,8 +1,8 @@
 db:
   driver-class-name: "com.mysql.cj.jdbc.Driver"
-  url: "jdbc:mysql://localhost:port/database_name"
-  username: ${db.username}
-  password: ${db.password}
+  url: "jdbc:mysql://localhost:3306/hr_be_api"
+  username: ${db.username:name}
+  password: ${db.password:password}
 
 spring:
   mail:
