--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
 		<version>3.2.2</version>
-		<relativePath/> <!-- lookup parent from repository -->
+		<relativePath/>
 	</parent>
 	<groupId>com.spring</groupId>
 	<artifactId>hr-be-api</artifactId>
@@ -18,6 +18,7 @@
 		<java.version>17</java.version>
 		<sql2o.version>1.8.0</sql2o.version>
         <mysql.connector.version>8.3.0</mysql.connector.version>
+		<spring.security.crypto.version>6.1.4</spring.security.crypto.version>
 	</properties>
 
 	<dependencies>
@@ -40,7 +41,7 @@
 		<dependency>
 			<groupId>org.springframework.security</groupId>
 			<artifactId>spring-security-crypto</artifactId>
-			<version>6.1.4</version>
+			<version>${spring.security.crypto.version}</version>
 		</dependency>
 
 
