--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -8,8 +8,8 @@ spring:
   mail:
     host: smtp.live.com
     port: 587
-    username:
-    password:
+    username: ${db.username:name}
+    password: ${db.password:password}
     properties:
       mail:
         smtp:
