--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,15 +1,15 @@
 db:
   driver-class-name: "com.mysql.cj.jdbc.Driver"
   url: "jdbc:mysql://localhost:3306/hr_be_api"
-  username: ${DB_USERNAME}
-  password: ${DB_PASSWORD}
+  username: ${DB_USERNAME:fake_user}
+  password: ${DB_PASSWORD:fake_password}
 
 spring:
   mail:
-    host: smtp.live.com
+    host: smtp.gmail.com
     port: 587
-    username: ${db.username:name}
-    password: ${db.password:password}
+    username: ${MAIL_USERNAME}
+    password: ${MAIL_PASSWORD}
     properties:
       mail:
         smtp:
